protoc-gen-swagger: updated response body example Also: * Added integration tests * Added an extra cli test for parsing the flag
